<resources>
    <string name="app_name">Battery Calculator</string>
    <string name="battery_percentage_hint">Battery Percentage (%)</string>
    <string name="battery_capacity_hint">Battery Capacity (mAh)</string>
    <string name="current_consumption_hint">Average Consumption (mA)</string>
    <string name="calculate_button_text">Calculate</string>
    <string name="result_text_format">Estimated Remaining Battery Life:\n%.2f hours (%.0f minutes)</string>
    <string name="error_empty_fields">Please fill in all fields.</string>
    <string name="error_invalid_input">Please enter valid numbers.</string>
    <string name="error_invalid_values">All values must be greater than 0.</string>

    <!-- Added for logo image content description -->
    <string name="logo_description">Battery Calculator Logo</string>
</resources>
