<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="#D4BCA5">

    <!-- Logo ImageView -->
    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/batcal"
        android:contentDescription="@string/logo_description"
        android:layout_marginBottom="24dp" />

    <EditText
        android:id="@+id/batteryPercentageInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/battery_percentage_hint"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF"
        android:importantForAccessibility="yes"
        android:layout_marginTop="16dp"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/batteryCapacityInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/battery_capacity_hint"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF"
        android:importantForAccessibility="yes"
        android:layout_marginTop="16dp"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/currentConsumptionInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/current_consumption_hint"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF"
        android:importantForAccessibility="yes"
        android:layout_marginTop="16dp"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_button_text"
        android:layout_marginTop="24dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        android:gravity="center" />

</LinearLayout>
